deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: touche-deployment
spec:
  selector:
    matchLabels:
      app: touche
  replicas: 3
  template:
    metadata:
      labels:
        app: touche
    spec:
      containers:
        - name: touche
          image: theodorebagwell/touche:4
          ports:
          - containerPort: 3000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy", "--dir=/cloudsql", "-instances=theodore-bagwell:us-central1:touche=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
