service.yaml
apiVersion: v1
kind: Service
metadata:
  name: touche
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: touche
