ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: touche-ingress
spec:
  backend:
    serviceName: touche
    servicePort: 3000
